2009-01-12  Andreas K. Foerster  <info@akfoerster.de>

	* akfavatar.h, avatar.c (avt_choice):
	use number of items instead of end_line
	result starting from 1
	avatarsay.c, avtfilechooser.c, akfavatar.pas: adapted

2009-01-11  Andreas K. Foerster  <info@akfoerster.de>

	* akfavatar.h, avatar.c (avt_choice):
	new function, replaces avt_menu (for easier language-bindings)
	avatarsay.c, avtfilechooser.c, akfavatar.pas: adapted

2009-01-10  Andreas K. Foerster  <info@akfoerster.de>

	* avatarsay.c (say_line):
	handle newline at the beginning and filter out \r\n

2009-01-04  Andreas K. Foerster  <info@akfoerster.de>

	* avatar-audio.c (avt_play_audio):
	set audio buffer size to lower value for lower latency

2009-01-03  Andreas K. Foerster  <info@akfoerster.de>

	* avatarsay.c (iscommand, handle_audio_command):
	new commands: loadaudio, playaudio, playaudioloop

2009-01-01  Andreas K. Foerster  <info@akfoerster.de>

	* avatar-audio.c (avt_play_audio):
	fix: only set soundleft when device could be opened
	(fixes bug #25263)

2008-12-02  Andreas K. Foerster  <info@akfoerster.de>

	* avtmsg.c: split off the code for mingw
	
	* avtmsg.c (info_msg):
	new function
	avatarsay.c (showversion): adapted
	
	* mingw/avtwindows.c:
	new file - separating out windows specific stuff
	avatarsay.c, avtfilechooser.c: adapted

2008-11-22  Andreas K. Foerster  <info@akfoerster.de>

	* avatarsay.c (start_shell):
	new function

2008-11-21  Andreas K. Foerster  <info@akfoerster.de>

	* avatarsay.c (get_user_home):
	work with a preallocated buffer
	(run_shell, initialize_datadir): adapped

2008-11-20  Andreas K. Foerster  <info@akfoerster.de>

	* avtterm.c, avtterm.h (avtterm_start):
	new parameter: working_dir
	avatarsay.c: adapted

2008-11-16  Andreas K. Foerster  <info@akfoerster.de>

	* avtfilechooser.c (ask_drive):
	new function (Windows only)

2008-11-12  Andreas K. Foerster  <info@akfoerster.de>

	* avatar.c (avt_draw_balloon, avt_draw_balloon2):
	improved using SDL_BlitSurface
